--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,6 +14,8 @@
   padding: 80px;
   gap: 64px;
   font-family: var(--font-geist-sans);
+
+  margin-left: 200px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -67,10 +69,7 @@
   height: 48px;
   padding: 0 20px;
   border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
+  transition: background 0.2s, color 0.2s, border-color 0.2s;
   cursor: pointer;
   display: flex;
   align-items: center;
