navigation update nav styles for both desktop and mobile

--- a/src/components/ProfilePicture/ProfilePicture.module.css
+++ b/src/components/ProfilePicture/ProfilePicture.module.css
@@ -1,9 +1,9 @@
 .profilePictureContainer {
-  border-bottom: 3px solid black;
+  border-bottom: 3px solid white;
 }
 
 .profilePictureName {
-  color: black;
+  color: white;
   text-align: center;
   margin: 10px 0;
   font-weight: bold;
