update to styles

--- a/src/app/(pages)/contact/page.module.css
+++ b/src/app/(pages)/contact/page.module.css
@@ -1,3 +1,10 @@
 .contactContainer {
   color: black;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  .contactContainer {
+    padding: 60px 10px;
+  }
 }
