--- a/src/app/(pages)/about-me/page.module.css
+++ b/src/app/(pages)/about-me/page.module.css
@@ -1,3 +1,10 @@
 .aboutMeContainer {
   color: black;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  .aboutMeContainer {
+    padding: 60px 10px;
+  }
 }
