--- a/src/app/(pages)/projects/page.module.css
+++ b/src/app/(pages)/projects/page.module.css
@@ -1,3 +1,10 @@
 .projectsContainer {
   color: black;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  .projectsContainer {
+    padding: 60px 10px;
+  }
 }
