--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,5 +42,27 @@ a {
 
 .mainContent {
   margin-left: 250px;
-  padding: 2rem;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  .mainContent {
+    margin-left: 0;
+    padding: 1rem;
+  }
+}
+
+h1 {
+  text-align: start;
+  font-size: 2.5rem;
+  font-weight: 700;
+  background: linear-gradient(90deg, #3b82f6, #06b6d4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    text-align: center;
+  }
 }
