--- a/src/app/(pages)/resume/page.module.css
+++ b/src/app/(pages)/resume/page.module.css
@@ -1,24 +1,18 @@
 .resumeContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  text-align: center;
   gap: 20px;
-  padding: 0;
   width: 40%;
-  color: black;
+  color: white;
+  margin: 0 auto;
 }
-
-@media (max-width: 768px) {
-  .resumeContainer {
-    padding: 60px 10px;
-  }
-}
-
 .resumeContainer h1 {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 700;
-  background: linear-gradient(90deg, #3b82f6, #06b6d4);
+  background: linear-gradient(90deg, #c8dbf8, #06b6d4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -56,11 +50,9 @@
 @media (max-width: 768px) {
   .resumeContainer {
     width: 100%;
-    padding: 10px;
     align-items: center;
     text-align: center;
     gap: 16px;
-    margin-top: 40px;
   }
 
   .resumePreview {
