--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -13,7 +13,7 @@
 }
 
 .cardLinkInactive {
-  opacity: 0.8;
+  background-color: rgba(30, 41, 59, 0.5);
   cursor: default;
 }
 
@@ -39,13 +39,13 @@
   margin: 0 0 12px;
   font-size: 1.5rem;
   font-weight: 700;
-  color: #fff;
+  color: white;
 }
 
 .cardContent {
   font-size: 1rem;
   line-height: 1.5;
-  color: #ddd;
+  color: white;
 }
 
 .mediaWrapper {
@@ -82,4 +82,5 @@
 .clickMeText {
   margin: 20px 0 0 0;
   text-align: center;
+  color: white;
 }
