--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@ a {
 @media (max-width: 768px) {
   .mainContent {
     margin-left: 0;
-    padding: 60px 10px;
+    padding: 80px 10px 60px 10px;
   }
 }
 
